<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.search.SearchBar
        android:id="@+id/sb_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:textAppearance="@style/SearchBar"
        app:backgroundTint="@color/lilac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_search_line" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_category"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginHorizontal="@dimen/space_median"
        android:layout_marginTop="@dimen/space_median"
        app:constraint_referenced_ids="tv_android,tv_ios,tv_front_end,tv_back_end,tv_ai,tv_etc"
        app:flow_horizontalGap="@dimen/space_small"
        app:flow_maxElementsWrap="3"
        app:flow_verticalGap="@dimen/space_small"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_search" />

    <TextView
        android:id="@+id/tv_android"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_android"
        android:text="@string/all_android" />

    <TextView
        android:id="@+id/tv_ios"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_ios"
        android:text="@string/all_ios" />

    <TextView
        android:id="@+id/tv_front_end"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_front_end"
        android:text="@string/all_front_end" />

    <TextView
        android:id="@+id/tv_back_end"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_back_end"
        android:text="@string/all_back_end" />

    <TextView
        android:id="@+id/tv_ai"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_ai"
        android:text="@string/all_ai" />

    <TextView
        android:id="@+id/tv_etc"
        style="@style/StudyCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_etc"
        android:text="@string/all_etc" />

</androidx.constraintlayout.widget.ConstraintLayout>