<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_median"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ban"
        style="@style/BlackText.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/dialog_ban"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        style="@style/BlackText.Medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginVertical="@dimen/space_median"
        android:layout_marginStart="@dimen/space_x_large"
        android:layout_marginEnd="@dimen/space_x_small"
        android:background="@drawable/bg_lilac_radius_12dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/all_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ban" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        style="@style/WhiteText.Medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="@dimen/space_x_small"
        android:layout_marginEnd="@dimen/space_x_large"
        android:background="@drawable/bg_black_radius_12dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/all_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_no"
        app:layout_constraintTop_toBottomOf="@id/tv_ban" />

</androidx.constraintlayout.widget.ConstraintLayout>